TextAnalyticsParent/TextAnalyticsDal/src/main/java/com/verint/textanalytics/dal/darwin/vtasyntax/VTASyntaxParser.java
package com.verint.textanalytics.dal.darwin.vtasyntax;// Generated from VTASyntax.g4 by ANTLR 4.5.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class VTASyntaxParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, DQUOTE=4, AGENT_IDENT=5, CUSTOMER_IDENT=6, INT=7, 
		NOT=8, AND=9, OR=10, NEAR=11, NOTIN=12, WORD=13, WS=14;
	public static final int
		RULE_vtaexpr = 0, RULE_exprOr = 1, RULE_exprAnd = 2, RULE_exprBasic = 3, 
		RULE_exprNear = 4, RULE_termsNoSPSNear = 5, RULE_termsAgentNear = 6, RULE_termsCustomerNear = 7, 
		RULE_term = 8, RULE_customer_phrase = 9, RULE_agent_phrase = 10, RULE_customer_word = 11, 
		RULE_agent_word = 12, RULE_phrase = 13, RULE_word = 14, RULE_not = 15, 
		RULE_and = 16, RULE_or = 17, RULE_near = 18;
	public static final String[] ruleNames = {
		"vtaexpr", "exprOr", "exprAnd", "exprBasic", "exprNear", "termsNoSPSNear", 
		"termsAgentNear", "termsCustomerNear", "term", "customer_phrase", "agent_phrase", 
		"customer_word", "agent_word", "phrase", "word", "not", "and", "or", "near"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "':'", null, null, null, null, "'NOT'", "'AND'", "'OR'", 
		"'NEAR'", "'NOTIN'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, "DQUOTE", "AGENT_IDENT", "CUSTOMER_IDENT", "INT", 
		"NOT", "AND", "OR", "NEAR", "NOTIN", "WORD", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "VTASyntax.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public VTASyntaxParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class VtaexprContext extends ParserRuleContext {
		public ExprOrContext exprOr() {
			return getRuleContext(ExprOrContext.class,0);
		}
		public VtaexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vtaexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).enterVtaexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).exitVtaexpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VTASyntaxVisitor ) return ((VTASyntaxVisitor<? extends T>)visitor).visitVtaexpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VtaexprContext vtaexpr() throws RecognitionException {
		VtaexprContext _localctx = new VtaexprContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_vtaexpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			exprOr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprOrContext extends ParserRuleContext {
		public List<ExprAndContext> exprAnd() {
			return getRuleContexts(ExprAndContext.class);
		}
		public ExprAndContext exprAnd(int i) {
			return getRuleContext(ExprAndContext.class,i);
		}
		public List<OrContext> or() {
			return getRuleContexts(OrContext.class);
		}
		public OrContext or(int i) {
			return getRuleContext(OrContext.class,i);
		}
		public ExprOrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprOr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).enterExprOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).exitExprOr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VTASyntaxVisitor ) return ((VTASyntaxVisitor<? extends T>)visitor).visitExprOr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprOrContext exprOr() throws RecognitionException {
		ExprOrContext _localctx = new ExprOrContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_exprOr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			exprAnd();
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << DQUOTE) | (1L << AGENT_IDENT) | (1L << CUSTOMER_IDENT) | (1L << INT) | (1L << NOT) | (1L << OR) | (1L << WORD))) != 0)) {
				{
				{
				setState(42);
				_la = _input.LA(1);
				if (_la==OR) {
					{
					setState(41);
					or();
					}
				}

				setState(44);
				exprAnd();
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprAndContext extends ParserRuleContext {
		public List<ExprBasicContext> exprBasic() {
			return getRuleContexts(ExprBasicContext.class);
		}
		public ExprBasicContext exprBasic(int i) {
			return getRuleContext(ExprBasicContext.class,i);
		}
		public List<AndContext> and() {
			return getRuleContexts(AndContext.class);
		}
		public AndContext and(int i) {
			return getRuleContext(AndContext.class,i);
		}
		public ExprAndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprAnd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).enterExprAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).exitExprAnd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VTASyntaxVisitor ) return ((VTASyntaxVisitor<? extends T>)visitor).visitExprAnd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprAndContext exprAnd() throws RecognitionException {
		ExprAndContext _localctx = new ExprAndContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_exprAnd);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			exprBasic();
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND) {
				{
				{
				setState(51);
				and();
				setState(52);
				exprBasic();
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprBasicContext extends ParserRuleContext {
		public ExprBasicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprBasic; }
	 
		public ExprBasicContext() { }
		public void copyFrom(ExprBasicContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExprBasicInParentContext extends ExprBasicContext {
		public ExprOrContext exprOr() {
			return getRuleContext(ExprOrContext.class,0);
		}
		public ExprBasicInParentContext(ExprBasicContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).enterExprBasicInParent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).exitExprBasicInParent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VTASyntaxVisitor ) return ((VTASyntaxVisitor<? extends T>)visitor).visitExprBasicInParent(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExprBasicNearContext extends ExprBasicContext {
		public ExprNearContext exprNear() {
			return getRuleContext(ExprNearContext.class,0);
		}
		public ExprBasicNearContext(ExprBasicContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).enterExprBasicNear(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).exitExprBasicNear(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VTASyntaxVisitor ) return ((VTASyntaxVisitor<? extends T>)visitor).visitExprBasicNear(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExprBasicTermContext extends ExprBasicContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public ExprBasicTermContext(ExprBasicContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).enterExprBasicTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).exitExprBasicTerm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VTASyntaxVisitor ) return ((VTASyntaxVisitor<? extends T>)visitor).visitExprBasicTerm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExprBasicNotContext extends ExprBasicContext {
		public NotContext not() {
			return getRuleContext(NotContext.class,0);
		}
		public ExprBasicContext exprBasic() {
			return getRuleContext(ExprBasicContext.class,0);
		}
		public ExprBasicNotContext(ExprBasicContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).enterExprBasicNot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).exitExprBasicNot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VTASyntaxVisitor ) return ((VTASyntaxVisitor<? extends T>)visitor).visitExprBasicNot(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TermNotContext extends ExprBasicContext {
		public NotContext not() {
			return getRuleContext(NotContext.class,0);
		}
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public TermNotContext(ExprBasicContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).enterTermNot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).exitTermNot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VTASyntaxVisitor ) return ((VTASyntaxVisitor<? extends T>)visitor).visitTermNot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprBasicContext exprBasic() throws RecognitionException {
		ExprBasicContext _localctx = new ExprBasicContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_exprBasic);
		try {
			setState(71);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new ExprBasicTermContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				term();
				}
				break;
			case 2:
				_localctx = new ExprBasicInParentContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				match(T__0);
				setState(61);
				exprOr();
				setState(62);
				match(T__1);
				}
				break;
			case 3:
				_localctx = new TermNotContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(64);
				not();
				setState(65);
				term();
				}
				break;
			case 4:
				_localctx = new ExprBasicNotContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(67);
				not();
				setState(68);
				exprBasic();
				}
				break;
			case 5:
				_localctx = new ExprBasicNearContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(70);
				exprNear();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprNearContext extends ParserRuleContext {
		public ExprNearContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprNear; }
	 
		public ExprNearContext() { }
		public void copyFrom(ExprNearContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CustomerTermsNearClauseContext extends ExprNearContext {
		public TermsCustomerNearContext termsCustomerNear() {
			return getRuleContext(TermsCustomerNearContext.class,0);
		}
		public CustomerTermsNearClauseContext(ExprNearContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).enterCustomerTermsNearClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).exitCustomerTermsNearClause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VTASyntaxVisitor ) return ((VTASyntaxVisitor<? extends T>)visitor).visitCustomerTermsNearClause(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AgentTermsNearClauseContext extends ExprNearContext {
		public TermsAgentNearContext termsAgentNear() {
			return getRuleContext(TermsAgentNearContext.class,0);
		}
		public AgentTermsNearClauseContext(ExprNearContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).enterAgentTermsNearClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).exitAgentTermsNearClause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VTASyntaxVisitor ) return ((VTASyntaxVisitor<? extends T>)visitor).visitAgentTermsNearClause(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NoSPSTermsNearClauseContext extends ExprNearContext {
		public TermsNoSPSNearContext termsNoSPSNear() {
			return getRuleContext(TermsNoSPSNearContext.class,0);
		}
		public NoSPSTermsNearClauseContext(ExprNearContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).enterNoSPSTermsNearClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).exitNoSPSTermsNearClause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VTASyntaxVisitor ) return ((VTASyntaxVisitor<? extends T>)visitor).visitNoSPSTermsNearClause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprNearContext exprNear() throws RecognitionException {
		ExprNearContext _localctx = new ExprNearContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_exprNear);
		try {
			setState(76);
			switch (_input.LA(1)) {
			case DQUOTE:
			case INT:
			case WORD:
				_localctx = new NoSPSTermsNearClauseContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				termsNoSPSNear();
				}
				break;
			case AGENT_IDENT:
				_localctx = new AgentTermsNearClauseContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				termsAgentNear();
				}
				break;
			case CUSTOMER_IDENT:
				_localctx = new CustomerTermsNearClauseContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(75);
				termsCustomerNear();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermsNoSPSNearContext extends ParserRuleContext {
		public List<WordContext> word() {
			return getRuleContexts(WordContext.class);
		}
		public WordContext word(int i) {
			return getRuleContext(WordContext.class,i);
		}
		public List<PhraseContext> phrase() {
			return getRuleContexts(PhraseContext.class);
		}
		public PhraseContext phrase(int i) {
			return getRuleContext(PhraseContext.class,i);
		}
		public List<NearContext> near() {
			return getRuleContexts(NearContext.class);
		}
		public NearContext near(int i) {
			return getRuleContext(NearContext.class,i);
		}
		public TermsNoSPSNearContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_termsNoSPSNear; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).enterTermsNoSPSNear(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).exitTermsNoSPSNear(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VTASyntaxVisitor ) return ((VTASyntaxVisitor<? extends T>)visitor).visitTermsNoSPSNear(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermsNoSPSNearContext termsNoSPSNear() throws RecognitionException {
		TermsNoSPSNearContext _localctx = new TermsNoSPSNearContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_termsNoSPSNear);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			switch (_input.LA(1)) {
			case INT:
			case WORD:
				{
				setState(78);
				word();
				}
				break;
			case DQUOTE:
				{
				setState(79);
				phrase();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(87); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(82);
				near();
				setState(85);
				switch (_input.LA(1)) {
				case INT:
				case WORD:
					{
					setState(83);
					word();
					}
					break;
				case DQUOTE:
					{
					setState(84);
					phrase();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(89); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEAR );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermsAgentNearContext extends ParserRuleContext {
		public List<Agent_wordContext> agent_word() {
			return getRuleContexts(Agent_wordContext.class);
		}
		public Agent_wordContext agent_word(int i) {
			return getRuleContext(Agent_wordContext.class,i);
		}
		public List<Agent_phraseContext> agent_phrase() {
			return getRuleContexts(Agent_phraseContext.class);
		}
		public Agent_phraseContext agent_phrase(int i) {
			return getRuleContext(Agent_phraseContext.class,i);
		}
		public List<NearContext> near() {
			return getRuleContexts(NearContext.class);
		}
		public NearContext near(int i) {
			return getRuleContext(NearContext.class,i);
		}
		public TermsAgentNearContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_termsAgentNear; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).enterTermsAgentNear(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).exitTermsAgentNear(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VTASyntaxVisitor ) return ((VTASyntaxVisitor<? extends T>)visitor).visitTermsAgentNear(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermsAgentNearContext termsAgentNear() throws RecognitionException {
		TermsAgentNearContext _localctx = new TermsAgentNearContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_termsAgentNear);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(91);
				agent_word();
				}
				break;
			case 2:
				{
				setState(92);
				agent_phrase();
				}
				break;
			}
			setState(100); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(95);
				near();
				setState(98);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(96);
					agent_word();
					}
					break;
				case 2:
					{
					setState(97);
					agent_phrase();
					}
					break;
				}
				}
				}
				setState(102); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEAR );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermsCustomerNearContext extends ParserRuleContext {
		public List<Customer_wordContext> customer_word() {
			return getRuleContexts(Customer_wordContext.class);
		}
		public Customer_wordContext customer_word(int i) {
			return getRuleContext(Customer_wordContext.class,i);
		}
		public List<Customer_phraseContext> customer_phrase() {
			return getRuleContexts(Customer_phraseContext.class);
		}
		public Customer_phraseContext customer_phrase(int i) {
			return getRuleContext(Customer_phraseContext.class,i);
		}
		public List<NearContext> near() {
			return getRuleContexts(NearContext.class);
		}
		public NearContext near(int i) {
			return getRuleContext(NearContext.class,i);
		}
		public TermsCustomerNearContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_termsCustomerNear; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).enterTermsCustomerNear(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VTASyntaxListener ) ((VTASyntaxListener)listener).exitTermsCustomerNear(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VTASyntaxVisitor ) return ((VTASyntaxVisitor<? extends T>)visitor).visitTermsCustomerNear(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermsCustomerNearContext termsCustomerNear() throws RecognitionException {
		TermsCustomerNearContext _localctx = new TermsCustomerNearContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_termsCustomerNear);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(104);
				customer_word();
				}
				break;
			case 2:
				{
				setState(105);
				customer_phrase();
				}
				break;
			}
			setState(113); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(108);
				near();
				setState(111);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
				case 1:
					{
					setState(109);
					customer_word();
					}
					break;
				case 2:
					{
					setState(110);
					customer_phrase();
					}
					break;
				}
				}
				}
				setState(115); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEAR );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
